feat: Add ItemDto and LedgerDto classes for data transfer; update Ledger class to remove BigDecimal dependency and improve data handling